# indic_compressor

./: Cargo.toml  README.md
src/: chunk.rs  chunk_neural.rs  dict.rs  lib.rs  lossy.rs  neural.rs  ppm.rs  tokenize.rs
web/: debug_output.txt  index.html  index.js  styles.css
web/pkg/: indic_ans_compressor.d.ts  indic_ans_compressor.js  indic_ans_compressor_bg.wasm  indic_ans_compressor_bg.wasm.d.ts  package.json
